// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# integration test ## should generate design 1`] = `
"info: loading map templates/map.json
info: Initializing git repository testoutput/.git
info: Generated testoutput/.editorconfig from template templates/.editorconfig._
info: Generated testoutput/.eslintignore from template templates/.eslintignore._
info: Generated testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generated testoutput/.gitignore from template templates/.gitignore._
info: Generated testoutput/.npmignore from template templates/.npmignore._
info: Generated testoutput/.prettierrc from template templates/.prettierrc._
info: Generated testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: loading extension templates/extensions/package-json-misc._
info: loading extension templates/extensions/package-json-jest._
info: loading extension templates/extensions/package-json-babel._
info: Generated testoutput/package.json from template templates/package.json._
info: Generated testoutput/README.md from template templates/README.md._
info: Generated testoutput/webpack.config.js from template templates/webpack.config.js._
info: Generated testoutput/src/js/index.js from template templates/index.js._
info: Generated testoutput/src/js/__tests__/integration.js from template templates/integration.js._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout branch master
warn: Checkout branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design and run npm commands 1`] = `
"info: loading map templates/map.json
info: Initializing git repository testoutput/.git
info: Generated testoutput/.editorconfig from template templates/.editorconfig._
info: Generated testoutput/.eslintignore from template templates/.eslintignore._
info: Generated testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generated testoutput/.gitignore from template templates/.gitignore._
info: Generated testoutput/.npmignore from template templates/.npmignore._
info: Generated testoutput/.prettierrc from template templates/.prettierrc._
info: Generated testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: loading extension templates/extensions/package-json-misc._
info: loading extension templates/extensions/package-json-jest._
info: loading extension templates/extensions/package-json-babel._
info: Generated testoutput/package.json from template templates/package.json._
info: Generated testoutput/README.md from template templates/README.md._
info: Generated testoutput/webpack.config.js from template templates/webpack.config.js._
info: Generated testoutput/src/js/index.js from template templates/index.js._
info: Generated testoutput/src/js/__tests__/integration.js from template templates/integration.js._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout branch master
warn: Checkout branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 1`] = `
"info: loading map templates/map.json
info: Initializing git repository testoutput/.git
info: Generated testoutput/.editorconfig from template templates/.editorconfig._
info: Generated testoutput/.eslintignore from template templates/.eslintignore._
info: Generated testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generated testoutput/.gitignore from template templates/.gitignore._
info: Generated testoutput/.npmignore from template templates/.npmignore._
info: Generated testoutput/.prettierrc from template templates/.prettierrc._
info: Generated testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: loading extension templates/extensions/package-json-misc._
info: loading extension templates/extensions/package-json-jest._
info: loading extension templates/extensions/package-json-babel._
info: Generated testoutput/package.json from template templates/package.json._
info: Generated testoutput/README.md from template templates/README.md._
info: Generated testoutput/webpack.config.js from template templates/webpack.config.js._
info: Generated testoutput/src/js/index.js from template templates/index.js._
info: Generated testoutput/src/js/__tests__/integration.js from template templates/integration.js._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout branch master
warn: Checkout branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 2`] = `
"info: loading map templates/map.json
info: Opening git repository testoutput/.git
warn: Ignoring error Error: cannot stash changes - there is nothing to stash.
info: Attempting to use branch master-sgen-generated
warn: Checkout branch master-sgen-generated
info: Generated testoutput/.editorconfig from template templates/.editorconfig._
info: Generated testoutput/.eslintignore from template templates/.eslintignore._
info: Generated testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generated testoutput/.gitignore from template templates/.gitignore._
info: Generated testoutput/.npmignore from template templates/.npmignore._
info: Generated testoutput/.prettierrc from template templates/.prettierrc._
info: Generated testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: loading extension templates/extensions/package-json-misc._
info: loading extension templates/extensions/package-json-jest._
info: loading extension templates/extensions/package-json-babel._
info: Generated testoutput/package.json from template templates/package.json._
info: Generated testoutput/README.md from template templates/README.md._
info: Generated testoutput/webpack.config.js from template templates/webpack.config.js._
info: Generated testoutput/src/js/index.js from template templates/index.js._
info: Generated testoutput/src/js/__tests__/integration.js from template templates/integration.js._
warn: Checkout branch master-sgen-generated
warn: Checkout branch master-sgen-generated
warn: Nothing changed in generated files
warn: Checkout branch master
info: sgen is done
"
`;

exports[`# integration test ## should print help options 1`] = `
"Usage:
  node sgen [OPTION]

Options:
  -m, --map=ARG+       mapping files
  -d, --design=ARG+    design files
  -e, --extension=ARG+ extension directories or files
  -o, --output=ARG     output directory for generated files
      --overwrite=ARG  Overwrite modes, can be one of skip, regen, error                                  (default: error)
      --forceOverwrite Override overwrite flags in the generator map with the one provided on --overwrite
  -h, --help           display this help
"
`;
